Mon Mar 12 17:57:14 2012  Lee Noar <leenoar@sky.com>

	* som_register.c(som_register_client): Add support for
	clients built with GCC 4.1.*.
	(som_register_sharedobject): Add support for libraries
	built with GCC 4.1.*.
	* som.h: Define symbols specific to GCC 4.1.*.
	* som_runcom.c(setup_aux_array): Pass ELF header flags
	to dynamic linker in auxillary array (this is where the
	type of floating point system is defined).
	* som_workspace.h: Define a symbol to give the address
	of the runtime array.
	* som_history.h: Fix comment.
	* somanager.cmhg: Change module version to 2.10 due to
	added support for older libraries and change to auxillary
	array (also gives SOManager in 4.1.2 room to grow if
	necessary).
	* dist/!SharedLibs/SOM1stRun,feb: Need version 2.10 of
	SOManager.

Wed Aug 10 16:15:45 2011  Lee Noar <leenoar@sky.com>

	Better object management and memory usage.
	struct som_object tries to fit into two lists; the
	global list and the client list, but ends up containing
	members that are not appropriate for one or the other.

	* som.h(struct som_object): Move client/global specific
	members to new structures som_library_object and
	som_client_object. som_object is no longer directly a
	link in a list, but is instead contained within
	som_library_object. som_client_object in the client list
	then points to a som_library_object in the global list.
	Also instead of allocating separate memory for object
	names, store at the end of the object and allocate as
	part of the object.
	* som_utilswis.c: Use new structure layout.
	* som_register.c: Likewise.
	* som_final.c: Likewise.
	* som_command.c: Likewise.
	* som_main.c: Likewise.
	* som_array.c: Likewise.
	* som_register.h(som_register_sharedobject): Remove
	redundant argument.
	* som_types: Forward declare new structure types.
	* som_runcom.c(register_dynamic_loader): Remove redundant
	argument to som_register_sharedobject.
	* somanager.cmhg: Bump version number to 2.05 because of
	significant internal changes.